Fix some issues with text overlap

--- a/app/assets/stylesheets/providers.scss
+++ b/app/assets/stylesheets/providers.scss
@@ -13,3 +13,12 @@ div.col label {
     text-align: left;
     width: 100%;
 }
+
+div.row.heading label {
+    font-weight: bold;
+    margin-bottom: 0.5em;
+}
+
+section.tab-header {
+    padding-top: 1em;
+}
